Client connected to api, tests working

--- a/gym-api/Dockerfile
+++ b/gym-api/Dockerfile
@@ -1,11 +1,7 @@
-FROM node:14.15.0
+FROM node:14.15.5-alpine3.10
 WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
 COPY . .
-EXPOSE 3001 3306
-RUN chmod +x wait-for-it.sh
-
-# ENTRYPOINT [ "/bin/bash", "-c" ]
-# CMD ["./wait-for-it.sh" , "-h", "mysql", "-p","3306" , "--strict" , "--timeout=300" , "--" , "npm", "run", "start"]
+EXPOSE 3001
 CMD ["npm", "run", "start"]
