--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
-version: "3.1"
-services:
+ version: "3.1"
+ services:
   mysql: 
     image: mysql:5.7.33
     command: --default-authentication-plugin=mysql_native_password
@@ -16,6 +16,8 @@ services:
         - mysql
     ports: 
         - "3001:3001"
+    volumes:
+      - /scripts:/scripts
   tests: 
     build: 
       context: ./gym-api
@@ -34,4 +36,4 @@ services:
         - mysql
         - api
     ports: 
-        - "4200:4200"
+        - 5000:5000
