--- a/gym-client/Dockerfile
+++ b/gym-client/Dockerfile
@@ -1,9 +1,8 @@
-FROM node:14.15.0
+FROM node:14.15.5-alpine3.10
 WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
+RUN npm install -g @angular/cli
 COPY . .
-EXPOSE 4200
-
-#CMD ["npm", "install", "-g", "@angular/cli","--","npm","start"]
-CMD ["npm","start"]
+expose 5000
+CMD ["ng","serve","--host","0.0.0.0","--port", "5000", "--disable-host-check"]
